--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <groupId>org.jacoco</groupId>
             <artifactId>org.jacoco.agent</artifactId>
             <version>${jacoco.version}</version>
+            <configuration>
+                     <excludes>
+                             <exclude>com/gargoylesoftware/**</exclude>
+                     </excludes>
+            </configuration>
             <classifier>runtime</classifier>
             <scope>test</scope>
         </dependency>
