--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
 
             <plugin>
                 <groupId>org.jacoco</groupId>
-                <artifactId>maven-jacoco-plugin</artifactId>
+                <artifactId>jacoco-maven</artifactId>
                 <version>${jacoco.version}</version>
                 <configuration>
                     <excludes>
