--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,18 @@
                     <argLine>${jmockit.agentConfig} ${jacoco.utAgentConfig}</argLine>
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
-                        <exclude>com/gargoylesoftware/**</exclude>
+                        <exclude>**com.steadystate*</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**com.steadystate*</exclude>
                     </excludes>
                 </configuration>
             </plugin>
