--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,25 @@
             </plugin>
 
             <!-- unit tests (with mocking and code coverage agents enabled) -->
+		<plugin>
+		    <groupId>org.jacoco</groupId>
+		    <artifactId>jacoco-maven-plugin</artifactId>
+		    <version>${jacoco.version}</version>
+		    <configuration>
+		        <excludes>
+		            <exclude>com.gargoylesoftware.**</exclude>
+		        </excludes>
+		    </configuration>
+		    <executions>
+		        <execution>
+		            <id>jacoco-report</id>
+		            <goals>
+		                <goal>report</goal>
+		            </goals>
+		        </execution>
+		    </executions>
+		</plugin>
+		
 	    <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -152,8 +171,6 @@
                     <argLine>${jmockit.agentConfig} ${jacoco.utAgentConfig}</argLine>
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
-                        <exclude>**com.steadystate*</exclude>
-			<exclude>com/gargoylesoftware/**</exclude>
                     </excludes>
                 </configuration>
             </plugin>
