--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,7 @@
                     <argLine>${jmockit.agentConfig} ${jacoco.utAgentConfig}</argLine>
                     <excludes>
                         <exclude>**/*StyleAttributes.java</exclude>
+			<exclude>**/*IntegrationTest.java</exclude>
                     </excludes>
                 </configuration>
             </plugin>
